# tensoris

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/tensoris/: profiler.hpp  tensor.hpp
src/: main.cpp  profiler.cpp  tensor.cpp
